# pancake

./: Cargo.toml  LICENSE.txt  README.txt
examples/: cat.txt  digital_root.txt  fizzbuzz.txt  hello_world.txt  helloworld.txt  mandelbrot.txt  pi.txt  tester.txt  truth_machine.txt
examples/recipes/: printstr.txt  rotate.txt
src/: help.txt  lib.rs  main.rs  parser.rs  structures.rs
tests/: parsing.rs  test.txt
