[package]
name = "pancake"
version = "0.1.0"
authors = ["baltdev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[lib]
name = "pancake"
path = "src/lib.rs"

[[bin]]
name = "pancake"
path = "src/main.rs"